# url-shortener

./: .coveragerc  .gitignore  docker-compose.yml  gulpfile.js  mypy.ini  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
app/: crud.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  dependencies.py  exceptions.py  handlers.py  main.py  models.py  schemes.py
app/api/v1/routes/: auth.py  users.py
app/core/: __init__.py  config.py  generator.py
app/core/auth/: jwt_auth.py
app/core/configs/: __init__.py  debug.py  settings.py  test.py
app/core/database/: database.py  generator.py
app/core/database/models/: __init__.py  base.py  user.py
app/core/utils/: __init__.py  auth.py  jwt_auth.py
app/tests/: conftest.py
app/tests/auth/: test_jwt_auth.py
app/tests/utils/: __init__.py  user.py  utils.py
backend/: crud.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml  ruff.toml  views.py
backend/api/: __init__.py  exceptions.py  handlers.py  pyproject.toml  schemes.py
backend/api/app/: main.py  views.py
backend/api/app/core/: config.py
backend/api/app/core/utils/: __init__.py  cryptography.py
backend/api/routes/: auth.py  users.py
backend/api/v1/: __init__.py  exceptions.py  fields.py  handlers.py  schemes.py
backend/api/v1/routes/: auth.py  users.py
backend/core/: config.py
backend/core/auth/: __init__.py  jwt_auth.py
backend/core/configs/: __init__.py  debug.py  test.py
backend/core/database/: database.py  generator.py
backend/core/database/models/: __init__.py  base.py  bases.py  click.py  link.py  status.py  user.py  verification.py
backend/core/utils/: __init__.py  time.py
backend/nginx/: Dockerfile  nginx.conf
backend/static_server/app/static/css/: app.min.css
backend/static_server/app/templates/: signin.html
backend/tests/: conftest.py
backend/tests/api/routes/: conftest.py  test_auth.py
backend/tests/core/auth/: test_jwt_auth.py
backend/tests/core/database/models/: test_user.py
backend/tests/crud/: test_user.py
backend/web/: pyproject.toml
backend/web/app/: config.py  main.py  views.py
backend/web/app/templates/: signin.html
frontend/scss/: _base.scss  _reset.scss  _variables.scss  signin.scss  signup.scss
frontend/scss/abstracts/: _box-shadows.scss  _breakpoints.scss  _colors.scss  _fonts.scss  _mixins.scss
frontend/scss/components/brand/: _brand.scss  brand.html
frontend/scss/components/button/: _button.scss
frontend/scss/components/card/: _card.scss
frontend/scss/components/cards/brief-card/: _brief-card.scss  brief-card.html
frontend/scss/components/cards/card/: _card.scss  card.html
frontend/scss/components/checkbox/: checkbox.html
frontend/scss/components/content/: _content.scss  content.html
frontend/scss/components/form-dialog/: _form-dialog.scss  form-dialog.html
frontend/scss/components/form-input/: _form-input.scss  form-input.html
frontend/scss/components/input/: _input.scss  input.html
frontend/scss/components/link/: _link.scss  link.html
frontend/scss/components/loader/: _loader.scss
frontend/scss/components/navbar/: _navbar.scss
frontend/scss/components/submit-button/: _submit-button.scss  submit-button.html
frontend/scss/layout/dialog-form/: _dialog-form.scss  dialog-form.html
frontend/scss/layout/navbar/: _navbar.scss  navbar.html
frontend/scss/mixins/: _placeholder.scss  _responsive.scss
frontend/scss/pages/: signin.scss  signup.scss
frontend/static/css/: app.css  colors.css  signin.css  signin.min.css  signup.css  signup.min.css
frontend/static/js/: signin.js  signin.min.js  signup.js  signup.min.js
frontend/templates/: app.html  register.html  signin.html  signup.html
frontend/ts/: auth.ts  signin.ts  signup.ts
tests/: conftest.py  data.py  utils.py
tests/api/: test_schemes.py
tests/api/routes/: test_auth.py
tests/api/v1/: test_schemes.py
tests/api/v1/routes/: conftest.py  test_auth.py
tests/auth/: test_jwt_auth.py
tests/core/auth/: test_jwt_auth.py
tests/core/database/models/: test_user.py
tests/crud/: test_crud_user.py  test_status.py  test_user.py
tests/utils/: __init__.py  user.py  utils.py
