[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kramber1024 <kramber268@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic-settings = "^2.3.1"
pydantic = {extras = ["email"], version = "^2.7.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
snowflake-id = "^1.0.2"
aiosqlite = "^0.20.0"
bcrypt = "^4.1.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",   # Disable check for missing docstring in public module
    "D101",   # Disable check for missing docstring in public class
    "D102",   # Disable check for missing docstring in public method
    "D103",   # Disable check for missing docstring in public function
    "D104",   # Disable check for missing docstring in public package
    "D105",   # Disable check for missing docstring in magic method
    "D106",   # Disable check for missing docstring in public nested class
    "D107",   # Disable check for missing docstring in __init__
    "ANN101", # Disable check for missing type annotation for self in method
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [".venv", ".vscode", ".git", ".mypy_cache"]
