[tool.poetry]
version = "0.1.0"
name = "ushort - URL Shortener"
description = "A URL shortener service"
authors = ["kramber1024 <kramber268@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic-settings = "^2.3.1"
pydantic = {extras = ["email"], version = "^2.7.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
snowflake-id = "^1.0.2"
aiosqlite = "^0.20.0"
bcrypt = "^4.1.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
