[tool.poetry]
name = "FastAPI API"
description = "An API for ushort URL shortener."
authors = ["kramber1024 <kramber268@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic-settings = "^2.3.1"
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
aiosqlite = "^0.20.0"
snowflake-id = "^1.0.2"
bcrypt = "^4.1.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
